versions/26.1.2/develop/commands/basics.md
---
title: Creating Commands
description: Create commands with complex arguments and actions.
authors:
  - Atakku
  - dicedpixels
  - haykam821
  - i509VCB
  - Juuxel
  - MildestToucan
  - modmuss50
  - mschae23
  - natanfudge
  - Pyrofab
  - SolidBlock-cn
  - Technici4n
  - Treeways
  - xpple
resources:
  https://github.com/Mojang/brigadier: Source Code for Brigadier
---

Creating commands can allow a mod developer to add functionality that can be used through a command. This tutorial will
teach you how to register commands and the general command structure of Brigadier.

::: info

[Brigadier](https://github.com/Mojang/brigadier) is an open-source command parser and dispatcher written by Mojang for Minecraft. It is a tree-based command library where
you build a tree of commands and arguments.

:::

## The `Command` Interface {#the-command-interface}

`com.mojang.brigadier.Command` is a functional interface, which runs some specific code, and throws a
`CommandSyntaxException` in certain cases. It has a generic type `S`, which defines the type of the _command source_.
The command
source provides some context in which a command was run. In Minecraft, the command source is typically a
`CommandSourceStack` which can represent a server, a command block, a remote connection (RCON), a player or an entity.

The single method in `Command`, `run(CommandContext<S>)` takes a `CommandContext<S>` as the sole parameter and returns
an integer. The command context holds your command source of `S` and allows you to obtain arguments, look at the parsed
command nodes and see the input used in this command.

Like other functional interfaces, it is usually used as a lambda or a method reference:

```java
Command<CommandSourceStack> command = context -> {
    return 0;
};
```

The integer can be considered the result of the command. Typically values less than or equal to zero mean a command has failed and will
do nothing. Positive values mean the command was successful and did something. Brigadier provides a constant to indicate
success; `Command#SINGLE_SUCCESS`.

### What Can the `CommandSourceStack` Do? {#what-can-the-servercommandsource-do}

A `CommandSourceStack` provides some additional implementation-specific context when a command is run. This includes
the
ability to get the entity that executed the command, the world the command was run in or the server the command was run
on.

You can access the command source from a command context by calling `getSource()` on the `CommandContext` instance.

```java
Command<CommandSourceStack> command = context -> {
    CommandSourceStack source = context.getSource();
    return 0;
};
```

## Registering a Basic Command {#registering-a-basic-command}

Commands are registered within the `CommandRegistrationCallback` provided by the Fabric API.

::: info

For information on registering callbacks, please see the [Events](../events) guide.

:::

The event should be registered in your [mod's initializer](../getting-started/project-structure#entrypoints).

The callback has three parameters:

- `CommandDispatcher<CommandSourceStack> dispatcher` - Used to register, parse and execute commands. `S` is the type
  of command source the command dispatcher supports.
- `CommandBuildContext registryAccess` - Provides an abstraction to registries that may be passed to certain command
  argument methods
- `Commands.CommandSelection environment` - Identifies the type of server the commands are being registered
  on.

In the mod's initializer, we just register a simple command:

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#test_command

In the `sendSuccess()` method, the first parameter is the text to be sent, which is a `Supplier<Component>` to avoid
instantiating `Component` objects when not needed.

The second parameter determines whether to broadcast the feedback to other
moderators. Generally, if the command is to query something without actually affecting the world, such as query the
current time or some player's score, it should be `false`. If the command does something, such as changing the
time or modifying someone's score, it should be `true`.

If the command fails, instead of calling `sendSuccess()`, you may directly throw any exception and the server or client
will handle it appropriately.

`CommandSyntaxException` is generally thrown to indicate syntax errors in commands or arguments. You can also implement
your own exception.

To execute this command, you must type `/test_command`, which is case-sensitive.

::: info

From this point onwards, we will be extracting the logic written within the lambda passed into `.executes()` builders into individual methods. We can then pass a method reference to `.executes()`. This is done for clarity.

:::

### Registration Environment {#registration-environment}

If desired, you can also make sure a command is only registered under some specific circumstances, for example, only in
the dedicated environment:

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#dedicated_command{2}
<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#execute_dedicated_command

### Command Requirements {#command-requirements}

Let's say you have a command that you only want moderators to be able to execute. This is where the `requires()` method
comes into play. The `requires()` method has one argument of a `Predicate<S>` which will supply a `CommandSourceStack`
to test with and determine if the `CommandSource` can execute the command.

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#required_command{3}
<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#execute_required_command

This command will only execute if the source of the command is a moderator at a minimum, including command
blocks. Otherwise, the command is not registered.

This has the side effect of not showing this command in <kbd>Tab</kbd> completion to anyone who is not a moderator. This is
also why you cannot <kbd>Tab</kbd>-complete most commands when you do not enable cheats.

### Sub Commands {#sub-commands}

To add a sub command, you register the first literal node of the command normally. To have a sub command, you have to append the next literal node to the existing node.

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#sub_command_one{3}
<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#execute_sub_command_one

Similar to arguments, sub command nodes can also be set optional. In the following case, both `/command_two`
and `/command_two sub_command_two` will be valid.

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#sub_command_two{2,8}
<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#execute_command_sub_command_two

## Client Commands {#client-commands}

Similarly, Fabric API provides the `ClientCommandRegistrationCallback` event in `net.fabricmc.fabric.api.client.command.v2` package that can be used to register client-side commands, replacing the vanilla `Commands` class with the equivalent `ClientCommands`. The code should exist only in client-side code.

<<< @/reference/26.1.2/src/client/java/com/example/docs/client/command/ExampleModClientCommands.java#register_command

## Command Redirects {#command-redirects}

Command redirects - also known as aliases - are a way to redirect the functionality of one command to another. This is useful for when you want to change the name of a command, but still want to support the old name.

::: warning

Brigadier [will only redirect command nodes with arguments](https://github.com/Mojang/brigadier/issues/46). If you want to redirect a command node without arguments, provide an `.executes()` builder with a reference to the same logic as outlined in the example.

:::

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#redirect_command
<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#execute_redirected_by

## FAQ {#faq}

### Why Does My Code Not Compile? {#why-does-my-code-not-compile}

- Catch or throw a `CommandSyntaxException` - `CommandSyntaxException` is not a `RuntimeException`. If you throw it,
  that should be in methods that throw `CommandSyntaxException` in method signatures, or it should be caught.
  Brigadier will handle the checked exceptions and forward the proper error message in the game for you.

- Issues with generics - You may have an issue with generics once in a while. If you are registering server
  commands (which are most of the case), make sure you are using `Commands.literal`
  or `Commands.argument` instead of `LiteralArgumentBuilder.literal` or `RequiredArgumentBuilder.argument`.

- Check the `sendSuccess()` method - You may have forgotten to provide a boolean as the second argument. Also remember
  that, since Minecraft 1.20, the first parameter is `Supplier<Component>` instead of `Component`.

- A Command should return an integer - When registering commands, the `executes()` method accepts a `Command` object,
  which is usually a lambda. The lambda should return an integer, instead of other types.

### Can I Register Commands at Runtime? {#can-i-register-commands-at-runtime}

::: warning

You can do this, but it is not recommended. You would get the `Commands` from the server and add anything commands
you wish to its `CommandDispatcher`.

After that, you need to send the command tree to every player again
using `Commands.sendCommands(ServerPlayer)`.

This is required because the client locally caches the command tree it receives during login (or when moderator packets
are sent) for local completions-rich error messages.

:::

### Can I Unregister Commands at Runtime? {#can-i-unregister-commands-at-runtime}

::: warning

You can also do this, however, it is much less stable than registering commands at runtime and could cause unwanted side
effects.

To keep things simple, you need to use reflection on Brigadier and remove nodes. After this, you need to send the
command tree to every player again using `sendCommands(ServerPlayer)`.

If you don't send the updated command tree, the client may think a command still exists, even though the server will
fail execution.

:::

<!---->
